# discord-fs

./: .gitignore  Cargo.toml  README.md
src/: controller.rs  main.rs
src/fs/: access.rs  create.rs  getattr.rs  lookup.rs  mkdir.rs  mod.rs  read.rs  readdir.rs  rmdir.rs  setattr.rs  unlink.rs  write.rs
src/webhook/: get_attachment.rs  mod.rs  send.rs  test.rs  update.rs  update_controller.rs
