[package]
name = "discord-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.12.0"
libc = "0.2.139"
clap = { version = "3.0", features = ["cargo"] }
bincode = "1.3.3"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
env_logger = "0.10.0"
